[package]
name = "guessing_game"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
dotenvy = "0.15.7"
tokio = { version = "1.47.1", features = ["full","rt", "net", "macros","tokio-macros"] }
log = "0.4"
log4rs = { version = "1.4.0", features = ["console_appender", "rolling_file_appender", "size_trigger", "time_trigger", "pattern_encoder", "gzip"] }
rand = "0.9.2"

